--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,16 +41,15 @@ dependencies:
   get: ^4.6.6
   lottie: ^3.1.2
   cloud_firestore: ^4.17.5
-  crystal_navigation_bar: ^1.0.0
   flutter_iconly: ^1.0.2
   bottom_nav_layout: ^3.0.10
   glass_kit: ^4.0.1
-  metaballs: ^1.5.0
   audioplayers: ^6.0.0
   video_player: ^2.8.7
   flutter_tts: ^4.0.2
   http: ^1.2.1
   google_generative_ai: ^0.4.3
+  speech_to_text: ^6.6.2
 #  video_player_web: ^2.3.1
 
 dev_dependencies:
