--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,12 +44,13 @@ dependencies:
   flutter_iconly: ^1.0.2
   bottom_nav_layout: ^3.0.10
   glass_kit: ^4.0.1
-  audioplayers: ^6.0.0
   video_player: ^2.8.7
   flutter_tts: ^4.0.2
   http: ^1.2.1
   google_generative_ai: ^0.4.3
   speech_to_text: ^6.6.2
+  fl_chart: ^0.68.0
+  flutter_rating_bar: ^4.0.1
 #  video_player_web: ^2.3.1
 
 dev_dependencies:
