--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   speech_to_text: ^6.6.2
   fl_chart: ^0.68.0
   flutter_rating_bar: ^4.0.1
+  flutter_shaders: ^0.1.2
+  toastification: ^2.1.0
 #  video_player_web: ^2.3.1
 
 dev_dependencies:
